@@ -230,7 +230,7 @@ $wgAutoloadLocalClasses = [
 	'CategoryViewer' => __DIR__ . '/includes/CategoryViewer.php',
 	'CdnCacheUpdate' => __DIR__ . '/includes/deferred/CdnCacheUpdate.php',
 	'CdnPurgeJob' => __DIR__ . '/includes/jobqueue/jobs/CdnPurgeJob.php',
-	'CentralIdLookup' => __DIR__ . '/includes/user/CentralIdLookup.php',
+	'CentralIdLookup' => __DIR__ . '/includes/user/CentralId/CentralIdLookup.php',
 	'ChangePassword' => __DIR__ . '/maintenance/changePassword.php',
 	'ChangeTags' => __DIR__ . '/includes/changetags/ChangeTags.php',
 	'ChangeTagsList' => __DIR__ . '/includes/changetags/ChangeTagsList.php',
@@ -783,7 +783,7 @@ $wgAutoloadLocalClasses = [
 	'LocalFileLockError' => __DIR__ . '/includes/filerepo/file/LocalFileLockError.php',
 	'LocalFileMoveBatch' => __DIR__ . '/includes/filerepo/file/LocalFileMoveBatch.php',
 	'LocalFileRestoreBatch' => __DIR__ . '/includes/filerepo/file/LocalFileRestoreBatch.php',
-	'LocalIdLookup' => __DIR__ . '/includes/user/LocalIdLookup.php',
+	'LocalIdLookup' => __DIR__ . '/includes/user/CentralId/LocalIdLookup.php',
 	'LocalRepo' => __DIR__ . '/includes/filerepo/LocalRepo.php',
 	'LocalSettingsGenerator' => __DIR__ . '/includes/installer/LocalSettingsGenerator.php',
 	'LocalisationCache' => __DIR__ . '/includes/cache/localisation/LocalisationCache.php',
