@@ -4,6 +4,7 @@ namespace MediaWiki;
 
 use ActorMigration;
 use BagOStuff;
+use CentralIdLookup;
 use CommentStore;
 use Config;
 use ConfigFactory;
@@ -87,6 +88,7 @@ use MediaWiki\Tidy\TidyDriverBase;
 use MediaWiki\User\ActorNormalization;
 use MediaWiki\User\ActorStore;
 use MediaWiki\User\ActorStoreFactory;
+use MediaWiki\User\CentralId\CentralIdLookupFactory;
 use MediaWiki\User\TalkPageNotificationManager;
 use MediaWiki\User\UserEditTracker;
 use MediaWiki\User\UserFactory;
@@ -685,6 +687,22 @@ class MediaWikiServices extends ServiceContainer {
 	 */
 	public function getBootstrapConfig() : Config {
 		return $this->getService( 'BootstrapConfig' );
+	}
+
+	/**
+	 * @since 1.37
+	 * @return CentralIdLookup
+	 */
+	public function getCentralIdLookup() : CentralIdLookup {
+		return $this->getService( 'CentralIdLookup' );
+	}
+
+	/**
+	 * @since 1.37
+	 * @return CentralIdLookupFactory
+	 */
+	public function getCentralIdLookupFactory() : CentralIdLookupFactory {
+		return $this->getService( 'CentralIdLookupFactory' );
 	}
 
 	/**
