@@ -124,6 +124,7 @@ use MediaWiki\Tidy\TidyDriverBase;
 use MediaWiki\User\ActorNormalization;
 use MediaWiki\User\ActorStore;
 use MediaWiki\User\ActorStoreFactory;
+use MediaWiki\User\CentralId\CentralIdLookupFactory;
 use MediaWiki\User\DefaultOptionsLookup;
 use MediaWiki\User\TalkPageNotificationManager;
 use MediaWiki\User\UserEditTracker;
@@ -267,6 +268,17 @@ return [
 				$services->getMainConfig()
 			),
 			$services->getUserFactory()
+		);
+	},
+
+	'CentralIdLookup' => static function ( MediaWikiServices $services ) : CentralIdLookup {
+		return $services->getCentralIdLookupFactory()->getLookup();
+	},
+
+	'CentralIdLookupFactory' => static function ( MediaWikiServices $services ) : CentralIdLookupFactory {
+		return new CentralIdLookupFactory(
+			new ServiceOptions( CentralIdLookupFactory::CONSTRUCTOR_OPTIONS, $services->getMainConfig() ),
+			$services->getObjectFactory()
 		);
 	},
 
